# quadratic-equation-resolver

./: .gitignore  CMakeLists.txt  README.md  quadraticequationsolver.cpp  resolutordeequacaoquadratica.cpp  resolutordeequacaoquadratica.sln  resolutordeequacaoquadratica.vcxproj  resolutordeequacaoquadratica.vcxproj.filters
